# libonewire

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
source/: onewire.c  onewire.h  onewire_dev.h
tests/: CMakeLists.txt  test_device.c  test_device.h  test_master_rx.c  test_master_tx.c  test_master_tx_infinite.c  test_timer.c  test_timer.h
